cmake_minimum_required( VERSION 2.8 )
project( tress CXX )
include( ../yaal/_aux/cmakelib.cmake )

use_cxx_compiler_flag( -Wno-missing-noreturn )
find_package( Boost COMPONENTS filesystem date_time REQUIRED )
find_package( yaal COMPONENTS hcore tools dbwrapper hconsole REQUIRED )

include_directories( . )
configure_file( ../yaal/_aux/cmake-client-config.hxx ${TARGET_PATH}/config.hxx )

file( GLOB SRCS ./src/*.cxx )
file( GLOB HDRS ./src/*.hxx )
file( GLOB TUT ./TUT/*.hpp )
add_executable( ${PROJECT_NAME} ${SRCS} ${HDRS} ../yaal/_aux/cmake-client-config.hxx )
add_library( TUT ${TUT} )
add_library( tressplugin MODULE data/plugin.cxx )
set_target_properties( ${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX OUTPUT_NAME 1exec RUNTIME_OUTPUT_DIRECTORY_DEBUG ${TARGET_PATH}/tress )
set_target_properties( TUT PROPERTIES LINKER_LANGUAGE CXX )
set_target_properties( tressplugin PROPERTIES LINKER_LANGUAGE CXX OUTPUT_NAME tressplugin${LIB_INFIX} LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_HOME_DIRECTORY}/data )
if ( CMAKE_HOST_WIN32 )
	target_link_libraries( ${PROJECT_NAME} ${yaal_LIBRARIES} libintl )
	include_external_msproject( makedef ../yaal/makedef.vcproj )
	include_external_msproject( mkheaders ../yaal/mkheaders.vcproj )
	include_external_msproject( msvcxx ../yaal/msvcxx.vcproj )
	include_external_msproject( hcore ../yaal/hcore.vcproj msvcxx makedef )
	include_external_msproject( tools ../yaal/tools.vcproj hcore )
	include_external_msproject( dbwrapper ../yaal/dbwrapper.vcproj tools )
	include_external_msproject( hconsole ../yaal/hconsole.vcproj tools )
	include_external_msproject( hdata ../yaal/hdata.vcproj dbwrapper hconsole )
	include_external_msproject( INSTALL ../yaal/INSTALL.vcproj hdata mkheaders )
	add_dependencies( tress INSTALL )
	add_dependencies( tressplugin INSTALL )
else()
	target_link_libraries( ${PROJECT_NAME} ${yaal_LIBRARIES} ${Boost_LIBRARIES} )
endif()

